feat: :sparkles: placeholder and buttons
Se empieza a hacer el diseño

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sp">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,20 @@
     <link rel="stylesheet" href="css/style.css">
     <script type="module" src="js/main.js" defer></script>
 </head>
+
 <body>
-    
+    <div class="container">
+        <h1 class="title">Just do it.</h1>
+        <div class="input_container">
+            <input type="text" id="to_do_placeholder" placeholder="Add a task." class="placeholder_bar"><button class="Gotthis">I Got This!</button>
+        </div>
+        <p class="time">21/6/2024, 6:31:29</p>
+        <div class="to_do_information">
+            <ul class="list">
+                <li> Tarea 1<button class="check_button">✔️</button><button class="trash_button">🗑️</button></li>
+            </ul>
+        </div>
+    </div>
 </body>
+
 </html>
