feat: :construction: Diseño del sitio y algunos arreglos extras

--- a/index.html
+++ b/index.html
@@ -18,7 +18,27 @@
         <p class="time">21/6/2024, 6:31:29</p>
         <div class="to_do_information">
             <ul class="list">
-                <li> Tarea 1<button class="check_button">✔️</button><button class="trash_button">🗑️</button></li>
+                <li><p>Examen JavaScript</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Proyecto JavaScript</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Ecommer api de amazon</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Json placeholder</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Ejercicios JavaScript</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
+
             </ul>
         </div>
     </div>
