refactor: :lipstick: Desing, and organization
Se hace un arreglo en el index.html, para que sea vea más ordenado según el formato de document, despues en el css, arreglamos para que los botones queden alineados a la derecha, y el texto a la izquierda.

--- a/index.html
+++ b/index.html
@@ -13,32 +13,57 @@
     <div class="container">
         <h1 class="title">Just do it.</h1>
         <div class="input_container">
-            <input type="text" id="to_do_placeholder" placeholder="Add a task." class="placeholder_bar"><button class="Gotthis">I Got This!</button>
+            <input type="text" id="to_do_placeholder" placeholder="Add a task." class="placeholder_bar"><button
+                class="Gotthis">I Got This!</button>
         </div>
         <p class="time">21/6/2024, 6:31:29</p>
         <div class="to_do_information">
-            <ul class="list">
-                <li><p>Examen JavaScript</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Proyecto JavaScript</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Ecommer api de amazon</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Json placeholder</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Ejercicios JavaScript</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-                <li><p>Tarea 1</p><button class="check_button">✔</button><button class="trash_button">🗑️</button></li>
-
+            <ul class="list" id="task_list">
+                <li>
+                    <p>Examen JavaScript</p>
+                    <button class="check_button">✔</button>
+                    <button class="trash_button">🗑️</button>
+                </li>
+                <li>
+                    <p>Proyecto JavaScript</p>
+                    <button class="check_button">✔</button>
+                    <button class="trash_button">🗑️</button>
+                </li>
+                <li>
+                    <p>Ecommer api de amazon</p>
+                    <button class="check_button">✔</button>
+                    <button class="trash_button">🗑️</button>
+                </li>
+                <li>
+                    <p>Json placeholder</p>
+                    <button class="check_button">✔</button>
+                    <button class="trash_button">🗑️</button>
+                </li>
+                <li>
+                    <p>Ejercicios JavaScript</p>
+                    <button class="check_button">✔</button>
+                    <button class="trash_button">🗑️</button>
+                </li>
+                <li>
+                    <p>Tarea 1</p>
+                    <button class="check_button">✔</button>
+                    <button class="trash_button">🗑️</button>
+                </li>
+                <li>
+                    <p>Tarea 1</p>
+                    <button class="check_button">✔</button>
+                    <button class="trash_button">🗑️</button>
+                </li>
+                <li>
+                    <p>Tarea 1</p>
+                    <button class="check_button">✔</button>
+                    <button class="trash_button">🗑️</button>
+                </li>
+                <li>
+                    <p>Tarea 1</p>
+                    <button class="check_button">✔</button>
+                    <button class="trash_button">🗑️</button>
+                </li>
             </ul>
         </div>
     </div>
