feat: :lipstick: Loading container
Se hace la animación de un icono cargando la pagina, falta darle funcion en cuanto a que cuando entre a la pagina cargue

--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
             </ul>
         </div>
     </div>
+    
+    <div class="container_loading" id="onload">
+        <div class="ring"></div>
+        <div class="ring"></div>
+        <div class="ring"></div>
+        <span class="loading">Loading...</span>
+    </div>
 </body>
 
 </html>
